@@ -1,3 +1,7 @@
+2013-01-19  Roland Clobus <rclobus@rclobus.nl>
+	* client/gtk/connect.c: Clear the list of games and set focus to the
+	dialog with the list of games when changing the meta server.
+
 2013-01-18  Roland Clobus <rclobus@rclobus.nl>
 	* client/ai/ai.c, client/ai/greedy.c, common/gtk/theme.h: Cleanup of
 	some warnings generated by --enable-warnings=full.
